--- a/fe/login.html
+++ b/fe/login.html
@@ -27,6 +27,14 @@
                     <input type="text" id="username" class="txt-input border" placeholder="Username">
                     <input type="password" id="password" class="txt-input border" placeholder="Password">
                     <input type="password" id="password" class="txt-input border" placeholder="Re Password">
+                    <select name="gender" class="txt-input border gender-select" id="">
+                        <option value="true">Male</option>
+                        <option value="false">Female</option>
+                    </select>
+                    <label for="image">
+                        <img src="user-female.jpg" class="image-profile" alt="">
+                    </label>
+                    <input type="file" id="image" class="image-file" >
                     <button type="submit" class="btn btn-login border">Sign up</button>
                 </form>  
             </div>            
