--- a/fe/login.html
+++ b/fe/login.html
@@ -32,7 +32,7 @@
                         <option value="false">Female</option>
                     </select>
                     <label for="image">
-                        <img src="user-female.jpg" class="image-profile" alt="">
+                        <img src="user-male.jpg" class="image-profile" alt="">
                     </label>
                     <input type="file" id="image" class="image-file" >
                     <button type="submit" class="btn btn-login border">Sign up</button>
