--- a/fe/chat.html
+++ b/fe/chat.html
@@ -25,7 +25,7 @@
                         <li>
                             <div class="user-contain">
                                 <div class="user-img">
-                                    <img src="user.png" alt="Image of user">
+                                    <img src="user-male.jpg" alt="Image of user">
                                     <div class="user-img-dot"></div>
                                 </div>
                                 <div class="user-info">
@@ -37,7 +37,7 @@
                         <li>
                             <div class="user-contain">
                                 <div class="user-img">
-                                    <img src="user.png" alt="Image of user">
+                                    <img src="user-male.jpg" alt="Image of user">
                                     <div class="user-img-dot"></div>
                                 </div>
                                 <div class="user-info">
@@ -49,7 +49,7 @@
                         <li>
                             <div class="user-contain">
                                 <div class="user-img">
-                                    <img src="user.png" alt="Image of user">
+                                    <img src="user-male.jpg" alt="Image of user">
                                     <div class="user-img-dot online"></div>
                                 </div>
                                 <div class="user-info">
@@ -61,7 +61,7 @@
                         <li>
                             <div class="user-contain">
                                 <div class="user-img">
-                                    <img src="user.png" alt="Image of user">
+                                    <img src="user-male.jpg" alt="Image of user">
                                     <div class="user-img-dot"></div>
                                 </div>
                                 <div class="user-info">
@@ -73,7 +73,7 @@
                         <li>
                             <div class="user-contain">
                                 <div class="user-img">
-                                    <img src="user.png" alt="Image of user">
+                                    <img src="user-male.jpg" alt="Image of user">
                                     <div class="user-img-dot online"></div>
                                 </div>
                                 <div class="user-info">
@@ -85,7 +85,7 @@
                         <li>
                             <div class="user-contain">
                                 <div class="user-img">
-                                    <img src="user.png" alt="Image of user">
+                                    <img src="user-male.jpg" alt="Image of user">
                                     <div class="user-img-dot"></div>
                                 </div>
                                 <div class="user-info">
@@ -104,7 +104,7 @@
                     </div>
                     <div class="user-contain">
                         <div class="user-img">
-                            <img src="user.png" alt="Image of user">
+                            <img src="user-male.jpg" alt="Image of user">
                             <div class="user-img-dot"></div>
                         </div>
                         <div class="user-info">
@@ -124,7 +124,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -132,7 +132,7 @@
                         <li>
                             <div class="message right">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -140,7 +140,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -148,7 +148,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -156,7 +156,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -164,7 +164,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -172,7 +172,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -180,7 +180,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -188,7 +188,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -196,7 +196,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -204,7 +204,7 @@
                         <li>
                             <div class="message right">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -212,7 +212,7 @@
                         <li>
                             <div class="message right">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -220,7 +220,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -228,7 +228,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -236,7 +236,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -244,7 +244,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">Hello, How are you?</div>
                             </div>
@@ -252,7 +252,7 @@
                         <li>
                             <div class="message">
                                 <div class="message-img">
-                                    <img src="user.png" alt="">
+                                    <img src="user-male.jpg" alt="">
                                 </div>
                                 <div class="message-text">
                                     <img src="post-image-1.jpg" alt="">
@@ -260,11 +260,12 @@
                             </div>
                         </li>
                     </ul>
-                    <ul class="list-file">
+                 <!--    <ul class="list-file">
                         <li>
                            <img src="user-female.jpg" alt="Image file"> 
                         </li>
-                    </ul>
+                    </ul> 
+                   -->
                 </div>
                 <form class="form-send-message">
                     <input type="text" class="txt-input" placeholder="Type message...">
@@ -278,6 +279,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script type="text/javascript" src="chat.js" charset="utf-8"></script>
 </body>
 </html>
