--- a/fe/login.html
+++ b/fe/login.html
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script type="text/javascript" src="login.js" charset="utf-8"></script>
 </body>
 </html>
