--- a/013-cloud-gaming/assets/index.html
+++ b/013-cloud-gaming/assets/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        background-color: #1a1a1a;
+      }
+      #video {
+        display: none;
+        width: 100vw;
+        height: 100vh;
+      }
+      #snake_game_btn {
+        background-color: green;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
+  </head>
   <body>
-
-    <button id="snake_game_btn" style="background-color: green; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">Snake Game</button>
-
-    <video id="video" autoplay style="display: none"></video>
-
+    <button id="snake_game_btn">Snake Game</button>
+    <video id="video" autoplay></video>
   </body>
   <script src="index.js"></script>
 </html>
